--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Install Dependencies
       run: npm i -g eslint
     - name: Run ESLint
-      run: eslint .eslintrc
+      run: eslint
