--- a/.eslintrc
+++ b/.eslintrc
@@ -6,9 +6,9 @@
         "browser": true
     },
     "rules": {
-        "indent": [
-            "error",
-            4
-        ]
+        "indent": ["error", 4],
+        "function-paren-newline": ["error", "consistent"],
+        "object-curly-newline": ["error", { "consistent": true }],
+        "curly": "error"
     }
 }
