--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
         node-version: '10.x'
     - name: Install Dependencies
       run: npm i -g eslint
-    - name: Run ESLint
-      run: eslint
-    - name: Verify VM
-      run: pwd
-    - name: Verify VM2
-      run: ls
+    - name: Style Test game.js
+      run: eslint src/game.js
+    - name: Style Test gameconfig.js
+      run: eslint src/gameconfig.js
+    - name: Style Test engine.js
+      run: eslint engine.js
