--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,11 @@
 {
     "extends": "eslint:recommended",
     "parserOptions": {
+        "ecmaVersion": 2017
     },
     "env": {
-        "browser": true
+        "browser": true,
+        "es6": true
     },
     "rules": {
         "indent": ["error", 4],
